Added the multiband version of the slice-timing plugin

--- a/src/batch/plugins/Makefile.am
+++ b/src/batch/plugins/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS = -DDATA_PATH=\"$(datadir)\" -I$(top_srcdir)/src
 lib_LTLIBRARIES = \
 	libSliceTimingPlugin.la
 
-libSliceTimingPlugin_la_SOURCES = slicetiming/task/slicetiming.cpp slicetiming/tool/slicetiming.cpp slicetiming/slicetiming.cpp
+libSliceTimingPlugin_la_SOURCES = slicetiming/task/mbslicetiming.cpp slicetiming/task/slicetiming.cpp slicetiming/tool/slicetiming.cpp slicetiming/slicetiming.cpp
 libSliceTimingPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
 libSliceTimingPlugin_la_LDFLAGS = -module -export-dynamic
 
@@ -15,5 +15,6 @@ plugins_DATA = \
 	.libs/libSliceTimingPlugin.so
 
 jobpluginsdir = $(datadir)/$(PACKAGE)/jobs/plugins
-jobplugins_DATA = \
-	../../../share/jobs/plugins/slicetiming.xsdext
+jobplugins_DATA =                                     \
+	../../../share/jobs/plugins/slicetiming.xsdext    \
+	../../../share/jobs/plugins/mbslicetiming.xsdext 
