Added batch-plugin for realignment

--- a/src/batch/plugins/Makefile.am
+++ b/src/batch/plugins/Makefile.am
@@ -6,7 +6,8 @@ AM_CPPFLAGS = -DDATA_PATH=\"$(datadir)\" -I$(top_srcdir)/src
 lib_LTLIBRARIES =              \
 	libSliceTimingPlugin.la    \
 	libDespikingPlugin.la      \
-	libBFCorrectionPlugin.la
+	libBFCorrectionPlugin.la   \
+	libRealignmentPlugin.la
 
 libSliceTimingPlugin_la_SOURCES = slicetiming/task/mbslicetiming.cpp slicetiming/task/slicetiming.cpp slicetiming/tool/slicetiming.cpp slicetiming/slicetiming.cpp
 libSliceTimingPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
@@ -20,15 +21,21 @@ libBFCorrectionPlugin_la_SOURCES = bfcorrection/task/bfcorrection.cpp bfcorrecti
 libBFCorrectionPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
 libBFCorrectionPlugin_la_LDFLAGS = -module -export-dynamic
 
+libRealignmentPlugin_la_SOURCES = realignment/task/realignment.cpp realignment/tool/realignment.cpp realignment/realignment.cpp
+libRealignmentPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
+libRealignmentPlugin_la_LDFLAGS = -module -export-dynamic
+
 pluginsdir = $(datadir)/rstools/plugins
 plugins_DATA = \
 	.libs/libSliceTimingPlugin.so   \
 	.libs/libDespikingPlugin.so     \
-	.libs/libBFCorrectionPlugin.so
+	.libs/libBFCorrectionPlugin.so  \
+	.libs/libRealignmentPlugin.so
 
 jobpluginsdir = $(datadir)/$(PACKAGE)/jobs/plugins
 jobplugins_DATA =                                     \
 	../../../share/jobs/plugins/slicetiming.xsdext    \
 	../../../share/jobs/plugins/mbslicetiming.xsdext  \
 	../../../share/jobs/plugins/despiking.xsdext      \
-	../../../share/jobs/plugins/bfcorrection.xsdext
+	../../../share/jobs/plugins/bfcorrection.xsdext   \
+	../../../share/jobs/plugins/realignment.xsdext
