Added a batch plugin for merging regressors

--- a/src/batch/plugins/Makefile.am
+++ b/src/batch/plugins/Makefile.am
@@ -10,7 +10,8 @@ lib_LTLIBRARIES =                    \
 	libRealignmentPlugin.la          \
 	libReorientationPlugin.la        \
 	libSmoothingPlugin.la            \
-	libDistortionCorrectionPlugin.la
+	libDistortionCorrectionPlugin.la \
+	libMergeRegressorsPlugin.la
 
 libSliceTimingPlugin_la_SOURCES = slicetiming/task/mbslicetiming.cpp slicetiming/task/slicetiming.cpp slicetiming/tool/slicetiming.cpp slicetiming/slicetiming.cpp
 libSliceTimingPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
@@ -40,6 +41,10 @@ libDistortionCorrectionPlugin_la_SOURCES = distcorrection/task/distcorrection.cp
 libDistortionCorrectionPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
 libDistortionCorrectionPlugin_la_LDFLAGS = -module -export-dynamic
 
+libMergeRegressorsPlugin_la_SOURCES = regressors/task/regressors.cpp regressors/tool/regressors.cpp regressors/regressors.cpp
+libMergeRegressorsPlugin_la_LIBADD  = $(LDADD) @LIBOBJS@
+libMergeRegressorsPlugin_la_LDFLAGS = -module -export-dynamic
+
 pluginsdir = $(datadir)/rstools/plugins
 plugins_DATA =                             \
 	.libs/libSliceTimingPlugin.so          \
@@ -48,7 +53,8 @@ plugins_DATA =                             \
 	.libs/libRealignmentPlugin.so          \
 	.libs/libReorientationPlugin.so        \
 	.libs/libSmoothingPlugin.so            \
-	.libs/libDistortionCorrectionPlugin.so
+	.libs/libDistortionCorrectionPlugin.so \
+	.libs/libMergeRegressorsPlugin.so
 
 jobpluginsdir = $(datadir)/$(PACKAGE)/jobs/plugins
 jobplugins_DATA =                                     \
@@ -59,4 +65,5 @@ jobplugins_DATA =                                     \
 	../../../share/jobs/plugins/realignment.xsdext    \
 	../../../share/jobs/plugins/reorientation.xsdext  \
 	../../../share/jobs/plugins/smoothing.xsdext      \
-	../../../share/jobs/plugins/distcorrection.xsdext
+	../../../share/jobs/plugins/distcorrection.xsdext \
+	../../../share/jobs/plugins/regressors.xsdext
