Added stripskull option to the normalization task that let's the brain float in CSF in order to achieve a better registration

--- a/src/batch/plugins/Makefile.am
+++ b/src/batch/plugins/Makefile.am
@@ -81,3 +81,8 @@ jobplugins_DATA =                                     \
 	../../../share/jobs/plugins/regressors.xsdext     \
 	../../../share/jobs/plugins/normalization.xsdext  \
 	../../../share/jobs/plugins/transformation.xsdext
+
+
+utilsdir = $(datadir)/$(PACKAGE)/utils
+utils_DATA =                                     \
+        ../../../share/utils/logkernel_0.3.nii.gz
